--- a/404.html
+++ b/404.html
@@ -50,7 +50,7 @@
     { 
       "@context": "http://schema.org", 
       "@type": "WebSite", 
-      "url": "http:\/\/example.org\/404.html",
+      "url": "https:\/\/goteflower.com\/404.html",
       "name": "404 Page not found",
       "author": {
         "@type": "Person",
