--- a/404.html
+++ b/404.html
@@ -35,10 +35,10 @@
   
   
     
-    <link type="text/css" rel="stylesheet" href="/css/404.min.2b1ffedfa1cd39e26610d196bbb8604dde61be38e0eb9245f86e40a758e86697.css" integrity="sha256-Kx/&#43;36HNOeJmENGWu7hgTd5hvjjg65JF&#43;G5Ap1joZpc="/>
+    <link type="text/css" rel="stylesheet" href="/testsite/css/404.min.2b1ffedfa1cd39e26610d196bbb8604dde61be38e0eb9245f86e40a758e86697.css" integrity="sha256-Kx/&#43;36HNOeJmENGWu7hgTd5hvjjg65JF&#43;G5Ap1joZpc="/>
   
     
-    <link type="text/css" rel="stylesheet" href="/css/custom.min.e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css" integrity="sha256-47DEQpj8HBSa&#43;/TImW&#43;5JCeuQeRkm5NMpJWZG3hSuFU="/>
+    <link type="text/css" rel="stylesheet" href="/testsite/css/custom.min.e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855.css" integrity="sha256-47DEQpj8HBSa&#43;/TImW&#43;5JCeuQeRkm5NMpJWZG3hSuFU="/>
   
   
    
@@ -50,7 +50,7 @@
     { 
       "@context": "http://schema.org", 
       "@type": "WebSite", 
-      "url": "https:\/\/goteflower.com\/404.html",
+      "url": "https:\/\/goteflower.com\/testsite\/404.html",
       "name": "404 Page not found",
       "author": {
         "@type": "Person",
@@ -93,7 +93,7 @@
    
 
   
-  <script src="/js/index.min.575dda8d49ee02639942c63564273e6da972ab531dda26a08800bdcb477cbd7f.js" integrity="sha256-V13ajUnuAmOZQsY1ZCc&#43;balyq1Md2iagiAC9y0d8vX8=" crossorigin="anonymous"></script>
+  <script src="/testsite/js/index.min.575dda8d49ee02639942c63564273e6da972ab531dda26a08800bdcb477cbd7f.js" integrity="sha256-V13ajUnuAmOZQsY1ZCc&#43;balyq1Md2iagiAC9y0d8vX8=" crossorigin="anonymous"></script>
    
 </body>
 
