--- a/p/math-typesetting/index.html
+++ b/p/math-typesetting/index.html
@@ -207,7 +207,7 @@ $$</p>
             return;
         }
         var d = document, s = d.createElement('script'); s.async = true;
-        s.src = '//' + "hugo-theme-stack" + '.disqus.com/embed.js';
+        s.src = '//' + "goteflower" + '.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
@@ -240,8 +240,6 @@ $$</p>
     <footer class="site-footer">
     <section class="copyright">
         &copy; 
-        
-            2020 - 
         
         2021 Ricky&#39;s Blog
     </section>
